--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ pipenv==2022.1.8
 pipfile==0.0.2
 poetry==1.1.12
 wheel==0.37.1
+aiohttp==0.16.3
 Expat ==2.3.0
 
 # Some dependencies will only install if Cython is present
